--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* add pxelinux.cfg(default)
+* fix ks.cfg & change_ip.sh
+* remove dispatch mechenism
+* add client config
 * add opts and main()
 * add README & remove some useless module
 * setup a real node mac address in etc/backends/ip_manager.ini
